Checking missing value in GPS files
+ plus some cleaning.
For plot, we changed the default value of new.window to FALSE

--- a/R-fr.po
+++ b/R-fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 2.15.0\n"
 "Report-Msgid-Bugs-To: bugs.r-project.org\n"
-"POT-Creation-Date: 2013-08-16 22:37\n"
-"PO-Revision-Date: 2013-08-16 22:42+0200\n"
+"POT-Creation-Date: 2013-08-18 19:14\n"
+"PO-Revision-Date: 2013-08-18 19:24+0200\n"
 "Last-Translator: Joseph Larmarange <joseph@larmarange.net>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -105,6 +105,7 @@ msgid ""
 "- Cluster number (needed) \n"
 "- Longitude (decimal format in degrees, needed) \n"
 "- Latitude (decimal format in degrees, needed) \n"
+"- Clusters with missing coordinates (optional) \n"
 "- Clusters type (optional)\n"
 " Once the names of these variables identified, close the window so that the "
 "program can continue. \n"
@@ -116,7 +117,8 @@ msgstr ""
 "- Numéro de cluster (requis) \n"
 "- Longitude (en degrés avec décimales, requis) \n"
 "- Latitude (en degrés avec décimales, requis) \n"
-"-Type de clusters (optionel)\n"
+"- Clusters dont les coordonnées sont manquantes (optionel)\n"
+"- Type de clusters (optionel)\n"
 " Ensuite, fremez la fenêtre pour continuer le programme. \n"
 "\n"
 " Êtes-vous prêt?"
@@ -127,17 +129,24 @@ msgstr "Oui"
 msgid "Please indicate the following variables:"
 msgstr "Veuillez indiquer les variables suivantes"
 
-msgid "* Cluster number:"
-msgstr "* Numéro de cluster"
+msgid "* Cluster number (usually called DHSCLUST):"
+msgstr "* Numéro de cluster (le plus souvent il s'agit de DHSCLUST) :"
 
-msgid "* Longitude (decimal value):"
-msgstr "* Longitude (valeur décimale):"
+msgid "* Longitude (decimal value, usually called LONGNUM):"
+msgstr "* Longitude (valeur décimale, le plus souvent il s'agit de LONGNUM):"
 
-msgid "* Latitude (decimal value):"
-msgstr "* Latitude (valeur décimale):"
+msgid "* Latitude (decimal value, usually called LATNUM):"
+msgstr "* Latitude (valeur décimale, le plus souvent il s'agit de LATNUM) :"
 
-msgid "* Type of cluster (optionnal):"
-msgstr "* Type de cluster (optionnel):"
+msgid ""
+"* Clusters with missing coordinates (optionnal, usually called SOURCE, type "
+"0 if none):"
+msgstr ""
+"* Variable indiquant les clusters dont les coordonnées sont manquantes "
+"(optionnel, le plus souvent il s'agit de SOURCE, taper 0 si aucun) :"
+
+msgid "* Type of cluster (optionnal, type 0 if none):"
+msgstr "* Type de cluster (optionnel, sinon 0) :"
 
 msgid "----------------------------------------------------"
 msgstr "----------------------------------------------------"
@@ -145,14 +154,26 @@ msgstr "----------------------------------------------------"
 msgid "Please check the following informations:"
 msgstr "Veuillez vérifier les informations suivantes : "
 
+msgid "* Cluster number:"
+msgstr "* Numéro de cluster"
+
 msgid "Not available - WARNING: this variable must be specified!"
 msgstr "Non disponile - ATTENTION : cette variable doit être renseignée!"
 
-msgid "* Type of cluster (optionnal, 0 if not):"
-msgstr "* Type de cluster (optionnel, sinon 0):"
+msgid "* Longitude (decimal value):"
+msgstr "* Longitude (valeur décimale):"
+
+msgid "* Latitude (decimal value):"
+msgstr "* Latitude (valeur décimale):"
+
+msgid "* Clusters with missing coordinates (optionnal):"
+msgstr "* Clusters dont les coordonées sont manquantes (optionnel) :"
 
 msgid "Not available"
-msgstr "Non dispobile"
+msgstr "Non disponible"
+
+msgid "* Type of cluster (optionnal):"
+msgstr "* Type de cluster (optionnel):"
 
 msgid "WARNING: cluster number must be specified!"
 msgstr "ATTENTION : le numéro des clusters doit être spécifié"
@@ -176,6 +197,16 @@ msgstr "Ces données sont-elles correctes?"
 msgid "No"
 msgstr "Non"
 
+msgid ""
+"Please select the modality corresponding to missing coordinates (usually "
+"coded MIS)."
+msgstr ""
+"Sélectionnez la modalité correspond aux clusters dont les coordonnées sont "
+"manquantes (correspond à MIS le plus souvent)."
+
+msgid "Missing coordinates"
+msgstr "Systeme de coordonnées manquant"
+
 msgid "1.1 VARIABLES SELECTION"
 msgstr "1.1 SELECTION DES VARIABLES"
 
@@ -183,8 +214,8 @@ msgid ""
 "* Cluster number (0 if not, will be calculated from individual "
 "identification number):"
 msgstr ""
-"* (0 s'il n'existe pas. Le numéro de cluster sera alors calculé à partir des "
-"identifiants individuels.) :"
+"* Numéro de cluster (0 si la variable n'existe pas. Le numéro de cluster "
+"sera alors calculé à partir des identifiants individuels.) :"
 
 msgid "* Individual identification number (0 if not):"
 msgstr "* Identifiant individuel (0 s'il n'existe pas) :"
@@ -192,8 +223,8 @@ msgstr "* Identifiant individuel (0 s'il n'existe pas) :"
 msgid "* Individual identification number or Cluster number must be specified."
 msgstr "* L'dentifiant individuel ou le numéro de cluster doit être spécifié."
 
-msgid "* Analyzed variable (for example, result of HIV testing):"
-msgstr "* Variable analysée (par exemple, résultat du test VIH) : "
+msgid "* Analyzed variable:"
+msgstr "* Variable analysée : "
 
 msgid ""
 "* Statistical weight (0 if not. All persons will have the same weight of 1.):"
@@ -207,9 +238,6 @@ msgstr "* Identifiant individuel: "
 msgid ""
 "Not available - It will be calculated with individual identification number."
 msgstr "Non renseigné - Il sera calculé à partir de l'identifiant individuel."
-
-msgid "* Analyzed variable:"
-msgstr "* Variable analysée : "
 
 msgid "* Statistical weight:"
 msgstr "* Poids statistique"
@@ -228,21 +256,22 @@ msgid "WARNING: you have to specify the analyzed variable!"
 msgstr "ATTENTION : vous devez spécifier la variable à analyser!"
 
 msgid ""
-"Three windows will open in order to re-code the analysed variable.\n"
-"You will have to specify the modalities corresponding to a positive result "
-"(the analysed phenomenon occured), \n"
-"a negative result (not occured) and an undetermined result (considered as a "
-"missing value).\n"
-"You can select several modalities with CTRL.\n"
-"Are you ready?"
+"Please specify the modalities corresponding to a positive result (the "
+"analysed phenomenon occured), a negative result (not occured) and an "
+"undetermined result (considered as a missing value)."
 msgstr ""
-"Trois fenêtres vont s'ouvrir pour recoder la variable analysée.\n"
-"Vous devrez spécifier les modalités correspondant à un résultat positif (le "
-"phénomène étudié a eu lieu), \n"
-"négatif (n'a pas eu lieu) ou indéterminé (considéré alors comme valeur "
-"manquante).\n"
-"Vous pouvez sélectionner plusieurs modalités à l'aide de la touche CTRL.\n"
-"Êtes-vous-prêt?"
+"Indiquez les modalités correspondant à un résultat positif (le phénomène "
+"étudié a eu lieu), à un résultat négatif (n'a pas eu lieu) et à un résultat "
+"indéterminé (considéré comme une valeur manquante)."
+
+msgid "Positive result"
+msgstr "Résultat positif "
+
+msgid "Negative result"
+msgstr "Résultat negatif "
+
+msgid "Undetermined result"
+msgstr "Résultat indéterminé "
 
 msgid ""
 "WARNING: You specified the same modality two times or you forgot one. Please "
@@ -499,10 +528,34 @@ msgid_plural "%s are not valid country names."
 msgstr[0] "%s n'est pas un nom de pays valide"
 msgstr[1] "%s ne sont pas des noms de pays valides"
 
+msgid "%s cluster was deleted due to missing values."
+msgid_plural "%s clusters were deleted due to missing values."
+msgstr[0] "%s cluster a été supprimé en raison de coordonnées manquantes."
+msgstr[1] "%s clusters ont été supprimés en raison de coordonnées manquantes."
+
+msgid ""
+"%s cluster has latitude and longitude equal to 0. You should check if there "
+"is a variable in the dataset indicating clusters with missing coordinates."
+msgid_plural ""
+"%s clusters have latitude and longitude equal to 0. You should check if "
+"there is a variable in the dataset indicating clusters with missing "
+"coordinates."
+msgstr[0] ""
+"%s cluster a la valeur 0 pour longitude et latitude. Vous devriez vérifier "
+"dans le fichier de données s'il n'y aurait pas une variable indiquant les "
+"clusters dont les coordonnées sont manquantes."
+msgstr[1] ""
+"%s clusters ont la valeur 0 pour longitude et latitude. Vous devriez "
+"vérifier dans le fichier de données s'il n'y aurait pas une variable "
+"indiquant les clusters dont les coordonnées sont manquantes."
+
 msgid "the variable %s is missing."
 msgid_plural "the following variables (%s) are missing."
 msgstr[0] "la variables %s est manquante"
 msgstr[1] "les variables suivantes %s sont manquantes"
+
+#~ msgid "* Analyzed variable (for example, result of HIV testing):"
+#~ msgstr "* Variable analysée (par exemple, résultat du test VIH) : "
 
 #~ msgid ""
 #~ "the following variables (%s), defined in 'col', are not present in 'data'."
@@ -524,9 +577,6 @@ msgstr[1] "les variables suivantes %s sont manquantes"
 
 #~ msgid "Creating a prevR object"
 #~ msgstr "Création d'un objet de classe prevR"
-
-#~ msgid "Changing coordinates projection"
-#~ msgstr "Changement de systeme de coordonnees"
 
 #~ msgid ""
 #~ "Calculating rings of the same number of observations for different values "
