--- a/R-fr.po
+++ b/R-fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 2.15.0\n"
 "Report-Msgid-Bugs-To: bugs.r-project.org\n"
-"POT-Creation-Date: 2013-08-18 19:14\n"
-"PO-Revision-Date: 2013-08-18 19:24+0200\n"
+"POT-Creation-Date: 2013-08-19 12:33\n"
+"PO-Revision-Date: 2013-08-19 12:39+0200\n"
 "Last-Translator: Joseph Larmarange <joseph@larmarange.net>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -64,11 +64,25 @@ msgstr ""
 msgid "the 'element' argument must be 'clusters' or 'boundary'."
 msgstr "l'argument 'element' doit être 'clusters' ou 'boundary'."
 
+msgid ""
+"The package maptools is required to export boundary or clusters as "
+"shapefile. Please install it."
+msgstr ""
+"Le package maptools est nécessaire pour exporter 'boundary' ou 'clusters' au "
+"format shapefile. Merci d'installer ce package."
+
 msgid "the 'format' argument must be 'dbf', 'txt', 'csv', 'csv2' or 'shp'."
 msgstr "l'argument format doit être 'dbf', 'txt', 'csv', 'csv2' ou 'shp'."
 
-msgid "the package tcltk is required."
-msgstr "le package tcltk est nécessaire"
+msgid "The package foreign is required to export to DBF. Please install it."
+msgstr ""
+"Le package foreign est nécessaire pour exporter au format DBF. Merci de "
+"l'installer."
+
+msgid "The package tcltk is required to use manual fit. Please install it."
+msgstr ""
+"Le package tcltk est nécessaire pour utiliser l'ajustement manuel "
+"(fit='manual'). Merci de l'installer."
 
 msgid "Parameters"
 msgstr "Paramètres"
@@ -98,6 +112,11 @@ msgstr ""
 
 msgid "no data available for the variable '%s' with N=%s and R=%s."
 msgstr "pas de données disponibles pour la variable '%s' avec N=%s et R=%s."
+
+msgid "The package foreign is required to use import.dhs(). Please install it."
+msgstr ""
+"Le package foreign est nécessaire pour exécuter la fonction import.dhs(). "
+"Merci de l'installer."
 
 msgid ""
 "A window will open presenting the data contained in the file. Thank you to "
@@ -417,6 +436,13 @@ msgstr ""
 "problème pour ajuster le variogramme : la variable '%s' avec N=%s et R=%s "
 "n'a pas été traitée."
 
+msgid ""
+"The packages geoR and tcltk are required to use manual fit. Please install "
+"it."
+msgstr ""
+"Les packages geoR et tcltk sont nécessaires pour utiliser l'ajustement "
+"manuel (fit='manual'). Merci de les installer."
+
 msgid "Error: select an other model."
 msgstr "Erreur : choisissez un autre modèle."
 
@@ -553,6 +579,9 @@ msgid "the variable %s is missing."
 msgid_plural "the following variables (%s) are missing."
 msgstr[0] "la variables %s est manquante"
 msgstr[1] "les variables suivantes %s sont manquantes"
+
+#~ msgid "the package tcltk is required."
+#~ msgstr "le package tcltk est nécessaire"
 
 #~ msgid "* Analyzed variable (for example, result of HIV testing):"
 #~ msgstr "* Variable analysée (par exemple, résultat du test VIH) : "
