--- a/R-prevR.pot
+++ b/R-prevR.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 3.0.1\n"
 "Report-Msgid-Bugs-To: bugs.r-project.org\n"
-"POT-Creation-Date: 2013-08-19 09:46\n"
+"POT-Creation-Date: 2013-08-19 14:43\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,10 +38,16 @@ msgstr ""
 msgid "the 'element' argument must be 'clusters' or 'boundary'."
 msgstr ""
 
+msgid "The package maptools is required to export boundary or clusters as shapefile. Please install it."
+msgstr ""
+
 msgid "the 'format' argument must be 'dbf', 'txt', 'csv', 'csv2' or 'shp'."
 msgstr ""
 
-msgid "the package tcltk is required."
+msgid "The package foreign is required to export to DBF. Please install it."
+msgstr ""
+
+msgid "The package tcltk is required to use manual fit. Please install it."
 msgstr ""
 
 msgid "Parameters"
@@ -66,6 +72,9 @@ msgid "%s is not a valid formula: idw.prevR only accept formula with only one va
 msgstr ""
 
 msgid "no data available for the variable '%s' with N=%s and R=%s."
+msgstr ""
+
+msgid "The package foreign is required to use import.dhs(). Please install it."
 msgstr ""
 
 msgid "A window will open presenting the data contained in the file. Thank you to identify the following variables: \n- Cluster number (needed) \n- Longitude (decimal format in degrees, needed) \n- Latitude (decimal format in degrees, needed) \n- Clusters with missing coordinates (optional) \n- Clusters type (optional)\n Once the names of these variables identified, close the window so that the program can continue. \n\n Are you ready?"
@@ -285,6 +294,9 @@ msgid "the 'fit' argument must be 'auto' or 'manual'."
 msgstr ""
 
 msgid "problem to fit the variogram: the variable '%s' width N=%s and R=%s has not been treated."
+msgstr ""
+
+msgid "The packages geoR and tcltk are required to use manual fit. Please install it."
 msgstr ""
 
 msgid "Error: select an other model."
