--- a/vignettes/prevR-FR.rnw
+++ b/vignettes/prevR-FR.rnw
@@ -6,6 +6,7 @@
 %\VignetteIndexEntry{prevR - Manuel de référence en Français}
 \makeindex{}
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 \chapter*{}
 \begin{center}
 {\textbf{\huge Package `prevR'}}
@@ -556,8 +557,8 @@ import.dhs(file.sav, file.dbf)
 %
 \begin{Arguments}
 \begin{ldescription}
-\item[\code{file.sav}] fichier contenant les données individuelles d'une Enquête Démographique et de Santé (EDS), téléchargé au format SPSS (.sav) sur \url{http://www.measuredhs.com}. Peut-être aussi directement un fichier de données.
-\item[\code{file.dbf}] fichier contenant les données GPS d'une Enquête Démographique et de Santé (EDS), téléchargé au format DATABASE (.dbf) sur \url{http://www.measuredhs.com}.  Peut-être aussi directement un fichier de données.
+\item[\code{file.sav}] fichier contenant les données individuelles d'une Enquête Démographique et de Santé (EDS), téléchargé au format SPSS (.sav) sur \url{http://www.measuredhs.com}.
+\item[\code{file.dbf}] fichier contenant les données GPS d'une Enquête Démographique et de Santé (EDS), téléchargé au format DATABASE (.dbf) sur \url{http://www.measuredhs.com}.
 \end{ldescription}
 \end{Arguments}
 %
