--- a/po/R-fr.po
+++ b/po/R-fr.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: R 2.15.0\n"
 "Report-Msgid-Bugs-To: bugs.r-project.org\n"
 "POT-Creation-Date: 2013-12-28 14:37\n"
-"PO-Revision-Date: 2013-08-19 12:39+0200\n"
+"PO-Revision-Date: 2013-12-28 15:27+0100\n"
 "Last-Translator: Joseph Larmarange <joseph@larmarange.net>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 1.6.3\n"
 
 msgid "the 'data' argument must be a dataframe."
 msgstr "l'argument 'data' doit être un dataframe."
@@ -187,7 +187,7 @@ msgid "* Latitude (decimal value):"
 msgstr "* Latitude (valeur décimale):"
 
 msgid "* Clusters with missing coordinates (optionnal):"
-msgstr "* Clusters dont les coordonées sont manquantes (optionnel) :"
+msgstr "* Clusters dont les coordonnées sont manquantes (optionnel) :"
 
 msgid "Not available"
 msgstr "Non disponible"
